--- a/BrokerApp/BrokerApp.csproj
+++ b/BrokerApp/BrokerApp.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,7 +13,6 @@
 
   <ItemGroup>
     <Folder Include="Properties\" />
-	<PackageReference Update="Microsoft.NETCore.App" Version="2.1" />
   </ItemGroup>
 
 </Project>
